kubernetes/apps/base/kasm-firefox/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: firefox
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`firefox.theblacklodge.dev`)
      kind: Rule
      services:
        - name: firefox
          port: 3000
